--- a/.github/workflows/greetings.yml
+++ b/.github/workflows/greetings.yml
@@ -1,14 +1,14 @@
-name: Greetings
-
-on: [pull_request]
-
-jobs:
-  greeting:
-    runs-on: ubuntu-latest
-    permissions:
-      pull-requests: write
-    steps:
-    - uses: actions/first-interaction@v1
-      with:
-        repo-token: ${{ secrets.GITHUB_TOKEN }}
-        pr-message: '<h2>Welcome @${{ github.actor }} and thank you for creating a Pull Request!</h2>If your pull request gets merged, and you would like to be added to our MVPs list(contributors list) please reply to this comment with your details using the format below:<br><br>Name:<br>What you do:<br>Twitter handle:<br>Link (either to your website, blog, portfolio, GitHub, etc):<br><br>Don't forget to Star this repo if you haven't. ⭐<br>Thank you. 😊'
+name: 'First interaction'
+description: 'Greet new contributors when they create their first issue or open their first pull request'
+author: 'Timonwa'
+inputs:
+  repo-token:
+    description: ${{ secrets.GITHUB_TOKEN }}
+    required: true
+  issue-message:
+    description: 'Comment to post on an individual''s first issue'
+  pr-message:
+    description: '<h2>Welcome @${{ github.actor }} and thank you for creating a Pull Request!</h2>If your pull request gets merged, and you would like to be added to our MVPs list(contributors list) please reply to this comment with your details using the format below:<br><br>Name:<br>What you do:<br>Twitter handle:<br>Link (either to your website, blog, portfolio, GitHub, etc):<br><br>Don't forget to Star this repo if you haven't. ⭐<br>Thank you. 😊''
+runs:
+  using: 'docker'
+  image: 'Dockerfile'
