--- a/.github/workflows/stale.yml
+++ b/.github/workflows/stale.yml
@@ -7,7 +7,7 @@ name: Mark stale issues and pull requests
 
 on:
   schedule:
-  - cron: '30 1 * * *'
+    - cron: "30 1 * * *"
 
 jobs:
   stale:
@@ -17,17 +17,17 @@ jobs:
       pull-requests: write
 
     steps:
-    - uses: actions/stale@v4.0.0
-      with:
-        repo-token: ${{ secrets.GITHUB_TOKEN }}
-        stale-issue-label: 'stale'
-        stale-pr-label: 'stale'
-        stale-issue-message: 'This issue is stale because it has been open 20 days with no activity. Remove stale label or comment or this will be closed in 20 days.'
-        stale-pr-message: 'This PR is stale because it has been open 20 days with no activity. Remove stale label or comment or this will be closed in 20 days.'
-        close-issue-message: 'This issue was closed because it has been stalled for 15 days with no activity.'
-        close-pr-message: 'This PR was closed because it has been stalled for 15 days with no activity.'
-        exempt-issue-labels: 'resources, documentation'
-        days-before-issue-stale: 20
-        days-before-pr-stale: 20 
-        days-before-issue-close: 15
-        days-before-pr-close: 15
+      - uses: actions/stale@v4.0.0
+        with:
+          repo-token: ${{ secrets.GITHUB_TOKEN }}
+          stale-issue-label: "stale"
+          stale-pr-label: "stale"
+          stale-issue-message: "This issue is stale because it has been open 20 days with no activity. Remove stale label or comment or this will be closed in 20 days."
+          stale-pr-message: "This PR is stale because it has been open 20 days with no activity. Remove stale label or comment or this will be closed in 20 days."
+          close-issue-message: "This issue was closed because it has been stalled for 15 days with no activity."
+          close-pr-message: "This PR was closed because it has been stalled for 15 days with no activity."
+          exempt-issue-labels: "resources, documentation"
+          days-before-issue-stale: 20
+          days-before-pr-stale: 20
+          days-before-issue-close: 15
+          days-before-pr-close: 15
