created footer and home page and added meta data to index page.

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Tech Roadmap",
+  "name": "Tech Career Roadmap",
   "icons": [
     {
       "src": "favicon.ico",
