--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,11 @@
 {
   "short_name": "Tech Roadmap",
   "name": "Tech Career Roadmap",
+  "start_url": "/",
+  "display": "standalone",
+  "theme_color": "#21394f",
+  "background_color": "#21394f",
+  "description": "Begin your career in Tech. Roadmaps, articles, and resources to help you choose a career path, start your journey and grow in tech.",
   "icons": [
     {
       "src": "favicon.ico",
@@ -8,18 +13,14 @@
       "type": "image/x-icon"
     },
     {
-      "src": "logo192.png",
-      "type": "image/png",
-      "sizes": "192x192"
+      "src": "/android-chrome-192x192.png",
+      "sizes": "192x192",
+      "type": "image/png"
     },
     {
-      "src": "logo512.png",
-      "type": "image/png",
-      "sizes": "512x512"
+      "src": "/android-chrome-512x512.png",
+      "sizes": "512x512",
+      "type": "image/png"
     }
-  ],
-  "start_url": ".",
-  "display": "standalone",
-  "theme_color": "#000000",
-  "background_color": "#21394f"
+  ]
 }
