--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "next": "12.1.6",
     "react": "18.1.0",
     "react-dom": "18.1.0",
+    "react-icons": "^4.3.1",
     "scss": "^0.2.4",
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
     "eslint": "8.15.0",
-    "eslint-config-next": "12.1.6"
+    "eslint-config-next": "12.1.6",
+    "sass": "^1.52.0"
   }
 }
