--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -15,7 +15,9 @@
         "code",
         "maintenance",
         "content",
-        "design"
+        "design",
+        "question",
+        "review"
       ]
     },
     {
