--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -35,7 +35,7 @@
       "avatar_url": "https://avatars.githubusercontent.com/u/73110064?v=4",
       "profile": "https://github.com/roshni-salpekar",
       "contributions": [
-        "blog"
+        "resources"
       ]
     }
   ],
