--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -25,7 +25,8 @@
       "avatar_url": "https://avatars.githubusercontent.com/u/78088418?v=4",
       "profile": "https://anthonychinwe.hashnode.dev/",
       "contributions": [
-        "doc"
+        "doc",
+        "data"
       ]
     },
     {
