--- a/.github/workflows/stale.yml
+++ b/.github/workflows/stale.yml
@@ -26,7 +26,7 @@ jobs:
           stale-pr-message: "This PR is stale because it has been open 20 days with no activity. Remove stale label or comment or this will be closed in 20 days."
           close-issue-message: "This issue was closed because it has been stalled for 15 days with no activity."
           close-pr-message: "This PR was closed because it has been stalled for 15 days with no activity."
-          exempt-issue-labels: "resources, documentation"
+          exempt-issue-labels: "ignore"
           days-before-issue-stale: 20
           days-before-pr-stale: 20
           days-before-issue-close: 15
