--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "analyze": "cross-env ANALYZE=true next build"
   },
   "dependencies": {
     "next": "12.1.6",
@@ -17,6 +18,8 @@
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
+    "@next/bundle-analyzer": "^13.0.6",
+    "cross-env": "^7.0.3",
     "eslint": "8.15.0",
     "eslint-config-next": "12.1.6",
     "sass": "^1.52.0"
