--- a/.github/workflows/greetings.yml
+++ b/.github/workflows/greetings.yml
@@ -12,5 +12,5 @@ jobs:
       - uses: actions/first-interaction@v1
         with:
           repo-token: ${{ secrets.GITHUB_TOKEN }}
-          issue-message: "<h2>Welcome @${{ github.actor }} and thank you for raising an issue!</h2><br>Please confirm that the issue you are raising does not already exist."
-          pr-message: "<h2>Welcome @${{ github.actor }} and thank you for creating a Pull Request!</h2><br>Do not forget to Star this repo if you have not.<br>Thank you."
+          issue-message: "Welcome @${{ github.actor }} and thank you for raising an issue! The team was notified and they will get back to you as soon as possible. Please confirm that the issue you are raising does not already exist. Do not forget to leave us a Star if you have not yet. Thank you."
+          pr-message: "Welcome @${{ github.actor }} and thank you for creating a Pull Request! The team was notified and they will get back to you as soon as possible. Do not forget to leave us a Star if you have not yet. Thank you."
