--- a/.github/workflows/greetings.yml
+++ b/.github/workflows/greetings.yml
@@ -10,5 +10,5 @@ jobs:
         with:
           repo-token: ${{ secrets.GITHUB_TOKEN }}
           greeting: "Hey **#** welcome to this repo"
-          issue-message: "Welcome **#** and thank you for raising an issue! The team was notified and they will get back to you as soon as possible. Please confirm that the issue you are raising does not already exist. Do not forget to leave us a Star if you have not yet. Thank you."
+          issue-message: "Welcome **#** @${{ github.actor }} and thank you for raising an issue! The team was notified and they will get back to you as soon as possible. Please confirm that the issue you are raising does not already exist. Do not forget to leave us a Star if you have not yet. Thank you."
           pr-message: "Welcome **#** @${{ github.actor }} and thank you for creating a Pull Request! The team was notified and they will get back to you as soon as possible. Do not forget to leave us a Star if you have not yet. Thank you."
