--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "analyze": "cross-env ANALYZE=true next build"
   },
   "dependencies": {
+    "@vercel/analytics": "^1.1.3",
     "next": "12.1.6",
     "react": "18.1.0",
     "react-dom": "18.1.0",
