--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@vercel/analytics": "^1.1.3",
+    "@vercel/speed-insights": "^1.0.9",
     "next": "12.1.6",
     "react": "18.1.0",
     "react-dom": "18.1.0",
