refactor: update manifest.json, Footer.module.scss, Intro.js, _document.js, HomeDescription.js, NavBar.js, index.js, CareersList.js, and ContributeCTA.js
- Update "short_name" in manifest.json from "Tech Roadmap" to "Developer Roadmap"
- Update $purple color in Footer.module.scss from hsl(271, 46%, 53%) to hsl(350, 89%, 74%)
- Update heading tag in Intro.js from h2 to h1
- Add "lang" attribute with value "en" in Html tag in _document.js
- Remove Plausible Analytics script and add "view-transition" meta tag in _document.js
- Update heading text in HomeDescription.js from "Tech Roadmap" to "Developer Roadmap"
- Update nav logo text in NavBar.js from "TECH ROADMAP" to "DEVELOPER ROADMAP"
- Update link text in NavBar.js from "TECH ROADMAP" to "DEVELOPER ROADMAP"
- Update page title and meta tags in index.js and CareersPage.js from "Tech Roadmap" to "Developer Roadmap"
- Remove commented out code and update link text in CareersList.js
- Update project description in ContributeCTA.js from "OpenSource" to "open-source"

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,5 +1,5 @@
 {
-  "short_name": "Tech Roadmap",
+  "short_name": "Developer Roadmap",
   "name": "Tech Career Roadmap",
   "start_url": "/",
   "display": "standalone",
